--- a/code/notebooks/normalization/z_score_yearly.ipynb
+++ b/code/notebooks/normalization/z_score_yearly.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -24,6 +24,7 @@
     "import json\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
+    "import time\n",
     "\n",
     "from classes.helpers import *\n",
     "\n",
@@ -127,6 +128,101 @@
    "source": [
     "with open(data_folder + 'tmp/z_score_params_matched.json', 'w') as file:\n",
     "    json.dump(z_score_params, file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Add z-score to beers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('../data/tmp/z_score_params_matched.json') as file:\n",
+    "    z_score_params = json.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parse ratings from BA\n",
+      "Parse ratings from RB\n"
+     ]
+    }
+   ],
+   "source": [
+    "beers_zscore = {}\n",
+    "for key in ['ba', 'rb']:\n",
+    "    \n",
+    "    beers_zscore[key] = {}\n",
+    "    \n",
+    "    print('Parse ratings from {}'.format(key.upper()))\n",
+    "\n",
+    "    # Get the generator\n",
+    "    gen = parse('../data/{}/ratings.txt.gz'.format(key))\n",
+    "    \n",
+    "    for item in gen:\n",
+    "        beer_id = int(item['beer_id'])\n",
+    "        \n",
+    "        if beer_id not in beers_zscore[key].keys():\n",
+    "            beers_zscore[key][beer_id] = []\n",
+    "            \n",
+    "        rat = float(item['rating'])\n",
+    "            \n",
+    "        year = time.strftime('%Y', time.localtime(int(item['date'])))\n",
+    "        zscore = (rat-z_score_params[key][year]['mean'])/(z_score_params[key][year]['std'])\n",
+    "            \n",
+    "        beers_zscore[key][beer_id].append(zscore)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.390539303533\n",
+      "-0.302215344173\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in ['ba', 'rb']:\n",
+    "    ratings = []\n",
+    "    \n",
+    "    df = pd.read_csv('../data/{}/beers.csv'.format(key))\n",
+    "    \n",
+    "    for i in df.index:\n",
+    "        row = df.iloc[i]\n",
+    "        \n",
+    "        try:\n",
+    "            beer_id = int(row['beer_id'])\n",
+    "        \n",
+    "            ratings.append(np.mean(beers_zscore[key][beer_id]))\n",
+    "        except KeyError:\n",
+    "            ratings.append(np.nan)\n",
+    "            \n",
+    "    print(np.nanmean(ratings))\n",
+    "            \n",
+    "    df.loc[:, 'zscore'] = ratings\n",
+    "    \n",
+    "    df.to_csv('../data/{}/beers.csv'.format(key), index=False)"
    ]
   },
   {
