[UPD] ratings notebook

--- a/code/notebooks/matching/ratings.ipynb
+++ b/code/notebooks/matching/ratings.ipynb
@@ -163,7 +163,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for key in ['ba', 'rb']:\n",
