[RENAME] All the notebooks for a better flow

--- a/code/notebooks/2-matching/2-precision.ipynb
+++ b/code/notebooks/2-matching/2-precision.ipynb
@@ -342,14 +342,134 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"4\" halign=\"left\">ba</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">rb</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>abv</th>\n",
+       "      <th>beer_name</th>\n",
+       "      <th>brewery_name</th>\n",
+       "      <th>style</th>\n",
+       "      <th>abv</th>\n",
+       "      <th>beer_name</th>\n",
+       "      <th>brewery_name</th>\n",
+       "      <th>style</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [(ba, abv), (ba, beer_name), (ba, brewery_name), (ba, style), (rb, abv), (rb, beer_name), (rb, brewery_name), (rb, style)]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subdf[subdf['ba']['brewery_name'] == 'Cavalier Brewing']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"4\" halign=\"left\">ba</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">rb</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>abv</th>\n",
+       "      <th>beer_name</th>\n",
+       "      <th>brewery_name</th>\n",
+       "      <th>style</th>\n",
+       "      <th>abv</th>\n",
+       "      <th>beer_name</th>\n",
+       "      <th>brewery_name</th>\n",
+       "      <th>style</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [(ba, abv), (ba, beer_name), (ba, brewery_name), (ba, style), (rb, abv), (rb, beer_name), (rb, brewery_name), (rb, style)]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subdf[subdf['rb']['brewery_name'] == 'Il Giardino Della Birra']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "subdf[subdf['ba']['brewery_name'] == 'Cavalier Brewing']"
-   ]
+   "source": []
   }
  ],
  "metadata": {
