[ADD] First figures + Propensity score matching

--- a/code/notebooks/2-matching/5.3-properties_bob_propensity.ipynb
+++ b/code/notebooks/2-matching/5.3-properties_bob_propensity.ipynb
@@ -40,10 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "ts = pd.read_csv(data_folder + 'tmp/time_series_5_valid.csv', header=[0,1])\n",
@@ -64,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -135,6 +133,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(data_folder_folder + 'tmp/ids_propensity_5.json', 'r') as file_:\n",
+    "    ids = json.load(file_)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -143,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -162,7 +172,7 @@
    "source": [
     "df_json = {}\n",
     "\n",
-    "classes = ['H-L', 'H-M', 'L-M']\n",
+    "classes = ['H-L', 'H-M', 'M-L']\n",
     "\n",
     "for cl in classes:\n",
     "    df_json[cl] = []\n",
@@ -171,21 +181,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for cl in classes:\n",
     "    idx1 = np.array((dfs['ba']['class'] == cl[0]) & (dfs['rb']['class'] == cl[-1]))\n",
     "    subdf1 = dfs['ba'][idx1]\n",
+    "    subdf1 = subdf1[subdf1['beer_id'].isin(ids[cl])]\n",
     "    subdf1.index = range(len(subdf1))\n",
     "    \n",
     "    idx2 = np.array((dfs['ba']['class'] == cl[-1]) & (dfs['rb']['class'] == cl[0]))\n",
     "    subdf2 = dfs['ba'][idx2]\n",
+    "    subdf2 = subdf2[subdf2['beer_id'].isin(ids[cl])]\n",
     "    subdf2.index = range(len(subdf2))\n",
-    "\n",
     "    \n",
     "    nbr = min(len(subdf1), len(subdf2))\n",
     "    \n",
@@ -208,10 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "styles = np.insert(styles, 0, 'Total')\n",
@@ -220,10 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_styles = pd.DataFrame.from_dict(df_json)"
@@ -231,13 +236,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df_styles.to_csv(data_folder + 'tmp/styles_5.csv', index=False)"
+    "df_styles.to_csv(data_folder + 'tmp/styles_propensity_5.csv', index=False)"
    ]
   },
   {
@@ -249,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -260,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -268,7 +273,7 @@
    "source": [
     "df_json = {}\n",
     "\n",
-    "classes = ['H-L', 'H-M', 'L-M']\n",
+    "classes = ['H-L', 'H-M', 'M-L']\n",
     "\n",
     "for cl in classes:\n",
     "    df_json[cl] = []\n",
@@ -277,19 +282,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for cl in classes:\n",
     "    idx1 = np.array((dfs['ba']['class'] == cl[0]) & (dfs['rb']['class'] == cl[-1]))\n",
     "    subdf1 = dfs['ba'][idx1]\n",
+    "    subdf1 = subdf1[subdf1['beer_id'].isin(ids[cl])]\n",
     "    subdf1.index = range(len(subdf1))\n",
     "    \n",
     "    idx2 = np.array((dfs['ba']['class'] == cl[-1]) & (dfs['rb']['class'] == cl[0]))\n",
     "    subdf2 = dfs['ba'][idx2]\n",
+    "    subdf2 = subdf2[subdf2['beer_id'].isin(ids[cl])]\n",
     "    subdf2.index = range(len(subdf2))\n",
     "\n",
     "    \n",
@@ -314,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -326,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -337,13 +342,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df_countries.to_csv(data_folder + 'tmp/countries_5.csv', index=False)"
+    "df_countries.to_csv(data_folder + 'tmp/countries_propensity_5.csv', index=False)"
    ]
   }
  ],
