--- a/code/notebooks/2-matching/3-ratings.ipynb
+++ b/code/notebooks/2-matching/3-ratings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -42,50 +42,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create files for valid ratings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parse BA ratings\n",
-      "Parse RB ratings\n"
-     ]
-    }
-   ],
-   "source": [
-    "for key in ['ba', 'rb']:\n",
-    "    print('Parse {} ratings'.format(key.upper()))\n",
-    "    gen = parse(data_folder + key + '/ratings.txt.gz')\n",
-    "    \n",
-    "    file_ = gzip.open(data_folder + key + '/ratings_valid.txt.gz', 'wb')\n",
-    "\n",
-    "    for item in gen:\n",
-    "        text = item['text']\n",
-    "        if text != notext[key]:\n",
-    "            for key_dct in item.keys():\n",
-    "                file_.write('{}: {}\\n'.format(key_dct, item[key_dct]).encode('utf-8'))\n",
-    "            file_.write('\\n'.encode('utf-8'))\n",
-    "            \n",
-    "    file_.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Create files for valid ratings of matched beers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -112,9 +74,9 @@
    "source": [
     "for key in ['ba', 'rb']:\n",
     "    print('Parse {} ratings'.format(key.upper()))\n",
-    "    gen = parse(data_folder + key + '/ratings_valid.txt.gz'.format(key))\n",
+    "    gen = parse(data_folder + key + '/ratings.txt.gz'.format(key))\n",
     "    \n",
-    "    file_ = gzip.open(data_folder + 'matched/ratings_valid_{}.txt.gz'.format(key), 'wb')\n",
+    "    file_ = gzip.open(data_folder + 'matched/ratings_{}.txt.gz'.format(key), 'wb')\n",
     "\n",
     "    for item in gen:\n",
     "        if int(item['beer_id']) in beer_ids[key]:\n",
@@ -207,12 +169,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": []
   }
  ],
