--- a/code/notebooks/4-herding/1-time_series.ipynb
+++ b/code/notebooks/4-herding/1-time_series.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -42,12 +42,12 @@
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "nbr_rats = 1"
+    "nbr_rats = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -58,19 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "beers = beers[(beers['ba']['nbr_matched_valid_ratings'] >= nbr_rats) & (beers['rb']['nbr_matched_valid_ratings'] >= nbr_rats)]\n",
+    "beers = beers[(beers['ba']['nbr_ratings'] >= nbr_rats) & (beers['rb']['nbr_ratings'] >= nbr_rats)]\n",
     "beers.index = range(len(beers))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
     "\n",
     "for key in ratings.keys():\n",
     "    print('Parse {} ratings'.format(key.upper()))\n",
-    "    gen = parse(data_folder + 'matched/ratings_valid_{}.txt.gz'.format(key))\n",
+    "    gen = parse(data_folder + 'matched/ratings_{}.txt.gz'.format(key))\n",
     "    \n",
     "    for item in gen:\n",
     "        beer_id = item['beer_id']\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
     "global_average = {'ba': {'rating': 0, 'z_score': 0, 'std': 0},\n",
     "                  'rb': {'rating': 0, 'z_score': 0, 'std': 0}}\n",
     "\n",
-    "with open(data_folder + 'tmp/z_score_params_matched.json') as file:\n",
+    "with open(data_folder + 'tmp/z_score_params_matched_ratings.json') as file:\n",
     "    z = json.load(file)\n",
     "\n",
     "for key in ratings.keys():\n",
@@ -162,8 +162,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_json = {'ba': {'beer_id': [], 'dates': [], 'ratings': [], 'z_scores': [], 'avg_ratings': [], 'avg_z_scores': []},\n",
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -214,24 +216,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df.to_csv(data_folder + 'tmp/time_series_valid.csv'.format(nbr_rats), index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "df.to_csv(data_folder + 'tmp/time_series_{}_valid.csv'.format(nbr_rats), index=False)"
+    "df.to_csv(data_folder + 'tmp/time_series_{}.csv'.format(nbr_rats), index=False)"
    ]
   },
   {
