[UPD] Finished with the standardization

--- a/code/notebooks/4-herding/1-time_series.ipynb
+++ b/code/notebooks/4-herding/1-time_series.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -34,6 +34,7 @@
     "import json\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
+    "import scipy.stats as ss\n",
     "\n",
     "data_folder = '../data/'\n",
     "\n",
@@ -223,6 +224,121 @@
    "outputs": [],
    "source": [
     "df.to_csv(data_folder + 'tmp/time_series_{}.csv'.format(nbr_rats), index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Add ranks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(data_folder + 'tmp/global_averages.json') as file:\n",
+    "    global_avg = json.load(file)\n",
+    "\n",
+    "diffs = {'ba': [], 'rb': []}\n",
+    "for i in df.index:\n",
+    "    row = df.loc[i]\n",
+    "    for key in ['rb', 'ba']:\n",
+    "        diffs[key].append(row[key]['z_scores'][0] - global_avg[key]['z_score'])\n",
+    "        \n",
+    "thresholds = {}\n",
+    "\n",
+    "for key in ['ba', 'rb']:\n",
+    "    thresholds[key] = {}\n",
+    "    thresholds[key]['low'] = np.percentile(diffs[key], 15)\n",
+    "    thresholds[key]['high'] = np.percentile(diffs[key], 85)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key in ['ba', 'rb']:\n",
+    "    tmp = []\n",
+    "    nbr_rats = []\n",
+    "    \n",
+    "    for i in df.index:      \n",
+    "        if diffs[key][i] > thresholds[key]['high']:\n",
+    "            tmp.append('H')\n",
+    "        elif diffs[key][i] >= thresholds[key]['low']:\n",
+    "            tmp.append('M')\n",
+    "        else:\n",
+    "            tmp.append('L')\n",
+    "            \n",
+    "        nbr_rats.append(len(df.loc[i][key]['ratings']))\n",
+    "\n",
+    "    df.loc[:, ((key, 'class'))] = tmp\n",
+    "    df.loc[:, ((key, 'nbr_ratings'))] = nbr_rats\n",
+    "\n",
+    "    rank = ss.rankdata(-df[key]['avg_z_scores'], method='min')\n",
+    "    rank = 1-(rank-1)/(len(rank)-1)\n",
+    "        \n",
+    "    df.loc[:, ((key, 'rank_avg'))] = rank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ranks = {}\n",
+    "for key in ['ba', 'rb']:\n",
+    "    ranks[key] = []\n",
+    "    for i in df.index:\n",
+    "        ranks[key].append([])\n",
+    "    \n",
+    "    for i in range(100):\n",
+    "        tmp = []\n",
+    "        \n",
+    "        subdf = df[(df['ba']['nbr_ratings'] >= i+1) & (df['rb']['nbr_ratings'] >= i+1)]\n",
+    "        tmp = [subdf.loc[j][key]['z_scores'][i] for j in subdf.index]\n",
+    "            \n",
+    "        tmp = np.array(tmp)\n",
+    "        rank = ss.rankdata(-tmp, method='min')\n",
+    "        rank = 1-(rank-1)/(len(rank)-1)\n",
+    "        \n",
+    "        \n",
+    "        for idx, j in enumerate(subdf.index):\n",
+    "            ranks[key][j].append(rank[idx])\n",
+    "            \n",
+    "    df.loc[:, ((key, 'ranks'.format(i+1)))] = ranks[key]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'min_nbr_rats' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-96e3686e49b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_folder\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'tmp/time_series_{}_ranks.csv'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmin_nbr_rats\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'min_nbr_rats' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df.to_csv(data_folder + 'tmp/time_series_{}_ranks.csv'.format(min_nbr_rats), index=False)"
    ]
   },
   {
