[UPD] All plots done!

--- a/code/notebooks/4-herding/1-time_series.ipynb
+++ b/code/notebooks/4-herding/1-time_series.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -43,12 +43,12 @@
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "nbr_rats = 5"
+    "nbr_rats = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -262,13 +262,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for key in ['ba', 'rb']:\n",
     "    tmp = []\n",
-    "    nbr_rats = []\n",
+    "    nbr_ratings = []\n",
     "    \n",
     "    for i in df.index:      \n",
     "        if diffs[key][i] > thresholds[key]['high']:\n",
@@ -278,10 +280,10 @@
     "        else:\n",
     "            tmp.append('L')\n",
     "            \n",
-    "        nbr_rats.append(len(df.loc[i][key]['ratings']))\n",
+    "        nbr_ratings.append(len(df.loc[i][key]['ratings']))\n",
     "\n",
     "    df.loc[:, ((key, 'class'))] = tmp\n",
-    "    df.loc[:, ((key, 'nbr_ratings'))] = nbr_rats\n",
+    "    df.loc[:, ((key, 'nbr_ratings'))] = nbr_ratings\n",
     "\n",
     "    rank = ss.rankdata(-df[key]['avg_z_scores'], method='min')\n",
     "    rank = 1-(rank-1)/(len(rank)-1)\n",
@@ -291,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -322,33 +324,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'min_nbr_rats' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-96e3686e49b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_folder\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'tmp/time_series_{}_ranks.csv'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmin_nbr_rats\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'min_nbr_rats' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "df.to_csv(data_folder + 'tmp/time_series_{}_ranks.csv'.format(min_nbr_rats), index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(data_folder + 'tmp/time_series_{}_ranks.csv'.format(nbr_rats), index=False)"
+   ]
   }
  ],
  "metadata": {
